--- a/it_modernization/aliases.yaml
+++ b/it_modernization/aliases.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Events
   version: 1.0.0
-  generated: 2025-04-14
+  generated: 2025-04-15
 
 aliases:
 
@@ -1032,4 +1032,12 @@ aliases:
     named_aliases:
     - SSA-11
     source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.5_3.pdf
+    agency: SSA
+  - date: 2025-03-16
+    type: access_granted
+    event: Unidentified "Employee 11" is accidentally granted access to SSA systems that DOGE was banned from by the court
+      order
+    named_aliases:
+    - SSA-11
+    source: https://www.washingtonpost.com/politics/2025/04/15/doge-social-security-data-judge/
     agency: SSA
