--- a/it_modernization/raw_data/agencies.yaml
+++ b/it_modernization/raw_data/agencies.yaml
@@ -125,6 +125,9 @@
 - name: National Endowment for the Humanities
   id: NEH
 
+- name: National Labor Relations Board
+  id: NLRB
+
 - name: National Oceanic and Atmospheric Administration
   id: NOAA
   parent_id: Commerce
